--- a/MyApp/src/app/nav/nav.component.css
+++ b/MyApp/src/app/nav/nav.component.css
@@ -1,18 +1,57 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-.sidenav-container {
-  height: 100%;
+.main{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.sidenav {
-  width: 200px;
+
+
+header{
+  display: flex;
+  justify-content: space-between;
+  height: 4.5em;
+  align-items: center;
+  background-color:lightblue;
 }
 
-.sidenav .mat-toolbar {
-  background: inherit;
+header a
+{
+   text-decoration: none;
+   color: black;
+   margin: 1em;
 }
 
-.mat-toolbar.mat-primary {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+.navigation,
+.user{
+margin-left: 7em;
+margin-right: 7em;
+}
+
+.sign-up{
+   background-color: #ADE2DF;
+   padding: 0.5em;
+   border-radius: 5px;
+}
+
+footer{
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  height: 3em;
+  align-items: center;
+  background-color: lightblue;
+}
+
+footer .svg a{
+  color: black;
+  text-decoration: none;
+}
+
+footer p{
+  margin-left: 2em;
+  margin-right: 2em;
+}
+
+footer .svg{
+  margin-right: 2em;
 }
