--- a/MyApp/src/app/nav/nav.component.html
+++ b/MyApp/src/app/nav/nav.component.html
@@ -1,27 +1,26 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>MyApp</span>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<section class="main">
+  <header>
+    <div class="navigation">
+      <a href="#">Home</a>
+      <a href="#">Posts</a>
+      <a href="#">Questions</a>
+      <a href="#">News</a>
+    </div>
+    <div class="user">
+      <a href="#">Log in</a>
+      <a class="sign-up" href="#">Sign up</a>
+    </div>
+  </header>
+  
+  <app-home-page></app-home-page>
+  
+  <footer>
+    <p>© 2023, All Rights Reserved.</p>
+    <div class="svg">
+      <a href="#">a</a>
+      <a href="#">s</a>
+      <a href="#">d</a>
+    </div>
+  </footer>
+</section>
+  
