--- a/MyApp/src/app/nav/nav.component.html
+++ b/MyApp/src/app/nav/nav.component.html
@@ -7,12 +7,12 @@
       <a href="#">News</a>
     </div>
     <div class="user">
-      <a href="#">Log in</a>
-      <a class="sign-up" href="#">Sign up</a>
+      <a href="SignIn">Sign In</a>
+      <a class="sign-up" href="/SignUp">Sign up</a>
     </div>
   </header>
   
-  <app-home-page></app-home-page>
+  <router-outlet></router-outlet>
   
   <footer>
     <p>© 2023, All Rights Reserved.</p>
