--- a/MyApp/src/app/user/sign-in/sign-in.component.html
+++ b/MyApp/src/app/user/sign-in/sign-in.component.html
@@ -2,9 +2,9 @@
     <div class="form">
       <h2>Sign In</h2>
       <form class="login-form">
-        <input type="text" name="email" id="email" placeholder="email" [(ngModel)]="email" />
-        <input type="password" name="password" id="password" placeholder="password" [(ngModel)]="password"/>
-        <button type="submit" (click)="signIn()">login</button>
+        <input type="text" name="email" id="email" placeholder="email"  #userName required />
+        <input type="password" name="password" id="password" placeholder="password" #userPassword required/>
+        <button type="submit" (click)="authService.signIn(userName.value, userPassword.value)">login</button>
         <p class="message">
           Not registered? <a href="/SignUp">Create an account</a>
         </p>
