--- a/MyApp/src/app/user/sign-up/sign-up.component.html
+++ b/MyApp/src/app/user/sign-up/sign-up.component.html
@@ -7,23 +7,27 @@
           name="email"
           id="register-email"
           placeholder="email"
-          [(ngModel)]="email"
+          #userEmail
+          required
+          
         />
         <input
           type="password"
           name="password"
           id="register-password"
           placeholder="password"
-          [(ngModel)]="password"
+          #userPwd
+            required
+          
         />
         <input
           type="password"
           name="re-password"
           id="repeat-password"
           placeholder="repeat password"
-          [(ngModel)]="repassword"
+          
         />
-        <button type="submit" (click)="signUp()">register</button>
+        <button type="submit" (click)="authService.signUp(userEmail.value, userPwd.value)">register</button>
         <p class="message">Already registered? <a href="/SignIn">SignIn</a></p>
       </form>
     </div>
