--- a/MyApp/src/app/nav/nav.component.html
+++ b/MyApp/src/app/nav/nav.component.html
@@ -4,15 +4,19 @@
       <a href="home">Home</a>
       <a href="">Posts</a>
       <a href="">Questions</a>
-      <a href="">News</a>
+      <a href="/news">News</a>
     </div>
-    <div class="user">
+
+    <div class="user" *ngIf="!isLoggedIn">
       <a href="/SignIn">Sign In</a>
       <a class="sign-up" href="/SignUp">Sign up</a>
-      <a class="logout"  (click)="authService.logOut()">Sign out</a>
+    </div>
+
+    <div class="user" *ngIf="isLoggedIn">
+      <a class="logout" (click)="authService.logOut()">Sign out</a>
     </div>
   </header>
-  
+
   <router-outlet></router-outlet>
   
   <footer>
@@ -24,4 +28,3 @@
     </div>
   </footer>
 </section>
-  
