--- a/MyApp/src/app/home-page/home-page.component.html
+++ b/MyApp/src/app/home-page/home-page.component.html
@@ -1,13 +1,3 @@
-<section class="pops">
-    <div class="dig-curency">
-        <div class="user-post">
-            <h3>User</h3>
-            <p>some kind of post</p>
-        </div>
-        <div class='btn-date'>
-            <button>Like</button>
-            <p>date</p>
-        </div>
-    </div>
+ 
 
-</section>
+ <h1>HOME PAGE</h1>
