--- a/MyApp/src/app/nav/nav.component.html
+++ b/MyApp/src/app/nav/nav.component.html
@@ -1,11 +1,17 @@
 <section class="main">
   <header>
-    <div class="navigation">
+    <div class="navigation" *ngIf="!isLoggedIn">
       <a href="home">Home</a>
-      <a href="">Posts</a>
-      <a href="">Questions</a>
       <a href="/news">News</a>
+      <a href="/posts">Posts</a>
     </div>
+    <div class="navigation" *ngIf="isLoggedIn">
+      <a href="home">Home</a>
+      <a href="/news">News</a>
+      <a href="posts">Posts</a>
+      <a href="create">Whrite Post</a>
+    </div>
+
 
     <div class="user" *ngIf="!isLoggedIn">
       <a href="/SignIn">Sign In</a>
@@ -18,7 +24,7 @@
   </header>
 
   <router-outlet></router-outlet>
-  
+
   <footer>
     <p>© 2023, All Rights Reserved.</p>
     <div class="svg">
