--- a/MyApp/src/app/news/news.component.html
+++ b/MyApp/src/app/news/news.component.html
@@ -1,22 +1,25 @@
-
- <div class="container-fluid">
-     <div style="display: flex; flex-wrap: wrap;"  clas="row">
-         <div class="hero" *ngFor="let i of newsDisplay" >
-             <div class="content" >
-                 <img src="{{i.urlToImage}}">
-                 <div class="desc">
-                     <h3>{{i.source.name}}</h3>
-                     <h2 class="title">{{i.title}}</h2>
-                     <p class="sub-title">
-                         {{i.description}}
+<div class="container-fluid">
+    <div style="display: flex; flex-wrap: wrap;" clas="row">
+        <div class="hero" *ngFor="let i of newsDisplay">
+            <div class="content">
+                <div class="sub-content">
+                    <img src="{{i.urlToImage}}" alt="No Image">
+                </div>
+                    <div class="desc">
+                        <h3>{{i.source.name}}</h3>
+                        <h2 class="title">{{i.title}}</h2>
+                        <p class="sub-title">
+                            {{i.description}}
                         </p>
-                    </div>
-                    <div class="devider"></div>
-                    <div class="user">
-                        <a class="url" href="{{i.url}}">Read More</a>
-                        <p class="time">Date: {{i.publishedAt}}</p>
+                    <div clas="under">
+                        <div class="devider"></div>
+                        <div class="user">
+                            <a class="url" href="{{i.url}}">Read More</a>
+                            <p class="time">Date: {{i.publishedAt}}</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
