--- a/MyApp/src/app/home-page/home-page.component.html
+++ b/MyApp/src/app/home-page/home-page.component.html
@@ -1,3 +1,13 @@
  
 
- <h1>HOME PAGE</h1>
+<section class="home">
+    <h1>Welcome to Home Page</h1>
+    <h2>Theres nothing in particular here</h2>
+    <h3>You can access latest world News from the navigation bar</h3>
+    <h3>Also you can write your personal notes and delete them </h3>
+    <h3>if you Sign Up</h3>
+
+    
+
+    
+  </section>
