--- a/MyApp/src/app/home-page/home-page.component.css
+++ b/MyApp/src/app/home-page/home-page.component.css
@@ -1,53 +1,16 @@
-
-
-.pops div{
-    width: 70%;
-    height: auto;
-    border-radius: 18px;
-}
-
-div {
-    height: 520px;
-    margin: 12px;
-    background-color: #819daf;
-}
-
-section {
-    margin-top: 10em;
+.home {
     display: flex;
-    justify-content: center;
-
+    flex-direction: column;
+    align-items: center;
+    margin-top:  10em;
 }
 
-button {
-    all: unset;
-    margin: 14px;
-    border: 1px solid #323cc4;
-    padding: 4px 20px;
-    border-radius: 24px;
-    background-color: #327dc4;
-    color: white;
-    margin-left: 20px;
-    margin-top: 2px;
-    box-shadow: 0px 0px 1px 1px white;
-}
-.btn-date{
-    display: flex;
-    justify-content: space-between;
+h1{
+    font-size: 50px;
+    font-weight: bold;
 }
 
-p {
-    
-    font-size: 16px;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin-top: 20px;
-}
-
-h3,
-h4,
-h5 {
-    font-weight: 500;
-    font-size: 26px;
-    margin: 20px;
+h3{
+    font-size: 20px;
+    font-weight: bolder;
 }
