--- a/MyApp/src/app/nav/nav.component.html
+++ b/MyApp/src/app/nav/nav.component.html
@@ -3,13 +3,14 @@
     <div class="navigation" *ngIf="!isLoggedIn">
       <a href="home">Home</a>
       <a href="/news">News</a>
-      <a href="/posts">Posts</a>
+      
     </div>
     <div class="navigation" *ngIf="isLoggedIn">
       <a href="home">Home</a>
       <a href="/news">News</a>
-      <a href="posts">Posts</a>
-      <a href="create">Whrite Post</a>
+      
+      <a href="create">Write personal note</a>
+      <a href="myposts">My Notes</a>
     </div>
 
 
@@ -28,9 +29,7 @@
   <footer>
     <p>© 2023, All Rights Reserved.</p>
     <div class="svg">
-      <a href="#">a</a>
-      <a href="#">s</a>
-      <a href="#">d</a>
+      
     </div>
   </footer>
 </section>
