--- a/MyApp/src/app/postspage/postspage.component.html
+++ b/MyApp/src/app/postspage/postspage.component.html
@@ -1,36 +1,27 @@
-<div class="container">
+ 
+ <div *ngIf="allPosts.length === 0">
+    <p class="nopost">Sorry no posts yet</p>
+</div>
+ <div class="container">
+    
     <div class="row">
         <div class="col-12 col-lg-4 col-xl-3 order-2 order-lg-1">
-            <div class="card mb-3">
-                <div class="card-body text-center">
-                    <img src="https://therichpost.com/wp-content/uploads/2021/03/avatar3.png" alt="Jassa Jas"
-                        class="img-fluid rounded-circle mb-2" width="128" height="128">
-                    <h4 class="card-title mb-0">Jassa Jas</h4>
-                    <div class="text-muted mb-2">Front-end Developer</div>
-                    <div>
-                        <a class="btn btn-primary btn-sm" href="#">Follow</a>
-                        <a class="btn btn-primary btn-sm" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-message-square">
-                                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
-                            </svg> Message</a>
-                    </div>
-                </div>
-            </div>
+            
         </div>
         <div class="col-12 col-lg-8 col-xl-6 order-1 order-lg-2">
+            
             <div class="card" *ngFor="let i of allPosts">
                 <div class="card-body h-100">
                     <div class="media">
                         
+                        
                         <div class="media-body">
-                            <small class="float-right text-navy">5m ago</small>
+                            <small class="float-right text-navy"></small>
                             <p class="mb-2"><strong>{{i.title}}</strong></p>
                             <p>{{i.description}}</p>
                           
                             
-                            <small class="text-muted">Today 7:51 pm</small>
+                            <small class="text-muted"></small>
                             <br>
                             <a href="#" class="btn btn-sm btn-danger mt-1">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -42,7 +33,7 @@
                         </svg> Like</a>
                         
                         <button *ngIf="isLoggedIn" class="btn-sm btn-danger mt-1" >Delete</button>
-                            
+                       
                         </div>
                     </div>
                     <hr>
